--- a/adminlte/views/Admin/Accounts/login.handlebars
+++ b/adminlte/views/Admin/Accounts/login.handlebars
@@ -15,13 +15,13 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
 </head>
-<body class="hold-transition login-page">
-<div class="login-box">
+<body class="hold-transition  login-page">
+<div class="content-wrapper">
   <div class="login-logo">
     <b>Admin</b>
   </div>
   <!-- /.login-logo -->
-  <div class="card">
+  <div class="container-fluid">
     <div class="card-body login-card-body">
       <p class="login-box-msg">Sign in </p>
 
@@ -56,15 +56,7 @@
           <!-- /.col -->
         </div>
       </form>
-          <div class="row">
-            <div class="col-8">
-            </div>
-            <div class="col-4">
-            <a href="/">
-            <button type="submit" class="btn btn-primary btn-block">Home</button>
-          </a>
-          </div>
-          </div>
+          
       <div class="social-auth-links text-center mb-3">
         <p>- OR -</p>
         <a href="https://www.facebook.com/" class="btn btn-block btn-primary">
