--- a/adminlte/views/Admin/Accounts/signup.handlebars
+++ b/adminlte/views/Admin/Accounts/signup.handlebars
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
 </head>
 <body class="hold-transition register-page">
-<div class="register-box">
+<div class="content-wrapper">
   <div class="register-logo">
     <a href="../../index2.html"><b>Admin</b>Signup</a>
   </div>
@@ -62,15 +62,7 @@
           <!-- /.col -->
         </div>
       </form>
-         <div class="row">
-            <div class="col-8">
-            </div>
-            <div class="col-4">
-            <a href="/">
-            <button type="submit" class="btn btn-primary btn-block">Home</button>
-          </a>
-          </div>
-          </div>
+         
          
       <div class="social-auth-links text-center">
         
