--- a/adminlte/views/User/Accounts/forgotpassword.handlebars
+++ b/adminlte/views/User/Accounts/forgotpassword.handlebars
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
 </head>
 <body class="hold-transition login-page">
-<div class="login-box">
+<div class="content-wrapper">
   <div class="login-logo">
     <a href="#"><b>Admin</b>LTE</a>
   </div>
@@ -25,9 +25,9 @@
     <div class="card-body login-card-body">
       <p class="login-box-msg">You forgot your password? Here you can easily retrieve a new password.</p>
 
-      <form action="recover-password.html" method="post">
+      <form action="forgot" method="post">
         <div class="input-group mb-3">
-          <input type="email" class="form-control" placeholder="Email">
+          <input type="email" class="form-control" name="email" placeholder="Email">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -46,7 +46,7 @@
         <a href="login">Login</a>
       </p>
       <p class="mb-0">
-        <a href="signup1" class="text-center">Register a new member</a>
+        <a href="signup" class="text-center">Register a new member</a>
       </p>
     </div>
     <!-- /.login-card-body -->
