--- a/adminlte/views/User/Accounts/login.handlebars
+++ b/adminlte/views/User/Accounts/login.handlebars
@@ -16,18 +16,18 @@
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
 </head>
 <body class="hold-transition login-page">
-<div class="login-box">
+<div class="content-wrapper">
   <div class="login-logo">
-    <b>Admin</b>
+    <b>User</b>
   </div>
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
       <p class="login-box-msg">Sign in </p>
 
-      <form action="/" method="post">
+      <form action="login" method="post">
         <div class="input-group mb-3">
-          <input type="email" class="form-control" placeholder="Email">
+          <input type="email" class="form-control" name="useremail" placeholder="Email">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" name="userpassword" placeholder="Password">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
@@ -52,7 +52,7 @@
             </div>
           </div>
           <!-- /.col -->
-
+          <button type="submit" class="btn btn-primary btn-block">Submit</button>
           <!-- /.col -->
         </div>
       </form>
