--- a/adminlte/views/User/state/addstate.handlebars
+++ b/adminlte/views/User/state/addstate.handlebars
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,38 +15,22 @@
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
 </head>
 <body class="hold-transition login-page">
+
 <div class="content-wrapper">
-  <div class="login-logo">
-    <a href="forgott"><b>Admin</b>LTE</a>
-  </div>
+
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">You forgot your password? Here you can easily retrieve a new password.</p>
+   
+      <form action="addstate" method="post">
 
-      <form action="recover-password.html" method="post">
-        <div class="input-group mb-3">
-          <input type="email" class="form-control" placeholder="Email">
-          <div class="input-group-append">
-            <div class="input-group-text">
-              <span class="fas fa-envelope"></span>
+
+            <div>
+                <label>State Name</label>
+                <input class="form-control" type="text" name="statename">&nbsp;
+                <button class="btn btn-primary btn-block" type="submit">Submit</button>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <button type="submit" class="btn btn-primary btn-block">Request new password</button>
-          </div>
-          <!-- /.col -->
-        </div>
-      </form>
 
-      <p class="mt-3 mb-1">
-        <a href="login">Login</a>
-      </p>
-      <p class="mb-0">
-        <a href="signup" class="text-center">Register a new member</a>
-      </p>
     </div>
     <!-- /.login-card-body -->
   </div>
