--- a/adminlte/views/layouts/main.handlebars
+++ b/adminlte/views/layouts/main.handlebars
@@ -42,7 +42,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="index3.html" class="nav-link">Home</a>
+        <a href="/index" class="nav-link">Home</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
         <a href="#" class="nav-link">Contact</a>
@@ -265,7 +265,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="/user/signup1" class="nav-link">
+                <a href="/user/signup" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Signup</p>
                 </a>
@@ -277,7 +277,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="/user/table" class="nav-link">
+                <a href="/user/Home" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Display</p>
                 </a>
@@ -376,13 +376,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="./index.html" class="nav-link active">
+                <a href="/state/addstate" class="nav-link active">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Add</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./index2.html" class="nav-link">
+                <a href="/state/display" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Display</p>
                 </a>
@@ -471,8 +471,15 @@
   </aside>
   <!-- /.control-sidebar -->
 </div>
-<!-- ./wrapper -->
-
+{{{body}}}
+<!-- ./wrapper -->  
+  <footer class="main-footer">
+    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
+    All rights reserved.
+    <div class="float-right d-none d-sm-inline-block">
+      <b>Version</b> 3.1.0
+    </div>
+  </footer>
 <!-- jQuery -->
 <script src="plugins/jquery/jquery.min.js"></script>
 <!-- jQuery UI 1.11.4 -->
