--- a/adminlte/views/Admin/Accounts/login.handlebars
+++ b/adminlte/views/Admin/Accounts/login.handlebars
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
 </head>
 <body class="hold-transition  login-page">
-<div class="content-wrapper">
+<div class="login-box">
   <div class="login-logo">
     <b>Admin</b>
   </div>
