--- a/adminlte/views/Admin/Accounts/signup.handlebars
+++ b/adminlte/views/Admin/Accounts/signup.handlebars
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
 </head>
 <body class="hold-transition register-page">
-<div class="content-wrapper">
+<div class="login-box">
   <div class="register-logo">
     <a href="../../index2.html"><b>Admin</b>Signup</a>
   </div>
