--- a/adminlte/views/Admin/product/display.handlebars
+++ b/adminlte/views/Admin/product/display.handlebars
@@ -1,3 +1,4 @@
+{{>main}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +18,6 @@
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
 </head>
 <body>
-  {{>main}}
 <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -25,18 +25,18 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>DataTables</h1>
+            <h1>Product Table</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">DataTables</li>
+              <li class="breadcrumb-item active">ProductTable</li>
             </ol>
           </div>
         </div>
       </div><!-- /.container-fluid -->
     </section>
-    
+
     <!-- Main content -->
     <section class="content">
       <div class="container-fluid">
@@ -46,30 +46,35 @@
 
             <div class="card">
               <div class="card-header">
-                <h3 class="card-title">DataTable with default features</h3>
+                <h3 class="card-title">Product Table With Product Details</h3>
               </div>
               <!-- /.card-header -->
               <div class="card-body">
                 <table id="example1" class="table table-bordered table-striped">
                   <tr>
-                    <th>No</th>
-                    <th>Category Name</th>
-                    <th>Action</th>
-                  </tr>
-                  
-                      {{#each user_array}}
-                        <tr>
-                          <td>{{@index}}</td>
-                          <td>{{category_name}}</td>
-                          <td>
-                            <a href="/admin/Category/edit1/{{_id}}">Edit</a> | 
-                            <a href="/admin/Category/delete/{{_id}}">Delete</a>
-                          </td>
+                            <th>Index</th>
+                            <th>Product Name</th>
+                            <th>Product Details</th>
+                            <th>Product Price</th>
+                            <th>Product Image</th>
+                            <th>subcategory Name</th>
+                            <th>Action</th>
                         </tr>
-                    {{/each}}
-                  
-                 
-                  
+                        {{#each mydata}}
+                        <tr>
+                            <td>{{@index}}</td>
+                            <td>{{product_name}}</td>
+                            <td>{{product_detail}}</td>
+                            <td>{{product_price}}</td>
+                            <td><img src="/upload/{{product_photo}}" style="width: 100px;"></td>
+                            <td>{{_subcategory.subcategory_name}}</td>
+                            <td>
+                                <a href="/admin/product/edit/{{_id}}">Edit</a>
+                                <a href="/admin/product/delete/{{_id}}">Delete</a>
+                            </td>
+                        </tr>
+                        {{/each}}
+                   
                 </table>
               </div>
               <!-- /.card-body -->
@@ -81,10 +86,9 @@
         <!-- /.row -->
       </div>
       <!-- /.container-fluid -->
-      
     </section>
-  </div>
-{{>footer}}
+  
+
 <!-- jQuery -->
 <script src="../../plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
@@ -126,5 +130,4 @@
   });
 </script>
 </body>
-
 </html>
