--- a/adminlte/views/partials/main.handlebars
+++ b/adminlte/views/partials/main.handlebars
@@ -219,29 +219,18 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="login" class="nav-link active">
+                <a href="./change-password" class="nav-link active">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Login</p>
+                  <p>Change Password</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="signup" class="nav-link">
+                <a href="./logout" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Signup</p>
+                  <p>Logout</p>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="forgott" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Forgott Password</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="table" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Display</p>
-                </a>
-              </li>
+              
             </ul>
           </li>
 
