--- a/adminlte/views/Admin/subcategory/edit.handlebars
+++ b/adminlte/views/Admin/subcategory/edit.handlebars
@@ -3,11 +3,12 @@
 <html lang="en">
 <head>
 
+ </head>
 <body class="hold-transition login-page">
 
-<div class="content-wrapper">
+<div class="content-wrapper" max-auto>
 
-  <!-- /.login-logo -->
+  <!-- /.login-logo --> 
   <div class="card">
     <div class="card-body login-card-body">
         <form method="POST">
