--- a/adminlte/views/Admin/user/add.handlebars
+++ b/adminlte/views/Admin/user/add.handlebars
@@ -74,8 +74,8 @@ form button:hover {
                </tr>
                <tr>
                    <td><label>Gender</label></td>
-                   <td><input type="radio" name="usergender">Mail
-                   &nbsp;<input type="radio" name="usergender">Femail</td>
+                   <td><input type="radio" value="male" name="usergender">male
+                   &nbsp;<input type="radio" value="female" name="usergender">Female</td>
                </tr>
                <tr>
                    <td><label>Image</label></td>
